internal/fixtures/architecture/negative/python-cycle/apps/api/src/deepwork_api/application/b.py
from .a import VALUE_A

VALUE_B = VALUE_A
